; ModuleID = '/home/carl/AnghaBench/RetroArch/griffin/extr_..managerscheat_manager.c_cheat_manager_index_prev.c'
source_filename = "/home/carl/AnghaBench/RetroArch/griffin/extr_..managerscheat_manager.c_cheat_manager_index_prev.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i64, i32 }

@cheat_manager_state = common dso_local global %struct.TYPE_3__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @cheat_manager_index_prev() #0 {
  %1 = load i32, i32* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @cheat_manager_state, i32 0, i32 2), align 8
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %3, label %6

3:                                                ; preds = %0
  %4 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @cheat_manager_state, i32 0, i32 0), align 8
  %5 = icmp eq i64 %4, 0
  br i1 %5, label %6, label %7

6:                                                ; preds = %3, %0
  br label %19

7:                                                ; preds = %3
  %8 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @cheat_manager_state, i32 0, i32 1), align 8
  %9 = icmp eq i64 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %7
  %11 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @cheat_manager_state, i32 0, i32 0), align 8
  %12 = sub nsw i64 %11, 1
  store i64 %12, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @cheat_manager_state, i32 0, i32 1), align 8
  br label %16

13:                                               ; preds = %7
  %14 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @cheat_manager_state, i32 0, i32 1), align 8
  %15 = add nsw i64 %14, -1
  store i64 %15, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @cheat_manager_state, i32 0, i32 1), align 8
  br label %16

16:                                               ; preds = %13, %10
  %17 = load i64, i64* getelementptr inbounds (%struct.TYPE_3__, %struct.TYPE_3__* @cheat_manager_state, i32 0, i32 1), align 8
  %18 = call i32 @cheat_manager_update(%struct.TYPE_3__* @cheat_manager_state, i64 %17)
  br label %19

19:                                               ; preds = %16, %6
  ret void
}

declare dso_local i32 @cheat_manager_update(%struct.TYPE_3__*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
